--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+# Core dependencies with minimum versions
+# Use: pip install -r requirements.txt
 pm4py>=2.7.0
 pandas>=1.5.0
 numpy>=1.23.0
-
-# Visualization dependency
 graphviz>=0.20.0
+
+# Note: The following are part of Python's standard library and don't need to be installed:
+# - concurrent.futures (ProcessPoolExecutor)
+# - os, random, typing
